samples/_failures_safe/1761391063_b350ae_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_331fe6c9.c: In function ‘token_type_to_string’:
./samples/SAFE/__tmp_331fe6c9.c:176:9: error: expected ‘:’ or ‘...’ at end of input
  176 |         case TOKEN_EOF
      |         ^~~~
./samples/SAFE/__tmp_331fe6c9.c:176:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_331fe6c9.c:176:9: error: expected declaration or statement at end of input
